--- a/index.html
+++ b/index.html
@@ -2,35 +2,41 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- viewport-fit=cover 추가: 아이폰 노치 영역까지 배경 확장 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>회수금 계산기</title>
 
   <!-- PWA 관련 메타 태그 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <!-- 상태바 스타일: 배경과 자연스럽게 어우러지도록 설정 -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="계산기">
-  <!-- 업로드된 이미지 파일 URL로 변경 (로컬 경로로 수정) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/returnmoney/icon-180x180.png"> <!-- 180x180 아이콘 파일 경로로 변경 -->
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="/returnmoney/icon-180x180.png">
   <meta name="theme-color" content="#0f172a">
 
-  <!-- Favicon 링크 추가 (로컬 경로로 수정) -->
-  <link rel="icon" type="image/png" href="/returnmoney/icon-192x192.png"> <!-- Favicon 경로도 로컬 파일로 변경 -->
-
-  <!-- manifest.json 파일 링크 -->
+  <link rel="icon" type="image/png" href="/returnmoney/icon-192x192.png">
   <link rel="manifest" href="/returnmoney/manifest.json">
 
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- React & ReactDOM CDN (버전 명시적으로 변경) -->
+  <!-- React & ReactDOM CDN -->
   <script crossorigin src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <!-- Babel CDN for JSX support -->
+  <!-- Babel CDN -->
   <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
 
   <style>
-    /* Prevent number input spin buttons */
+    /* 전체 화면 높이 설정 및 상하단 텐션(고무줄) 효과 제거 */
+    html, body {
+      height: 100%;
+      background-color: #0f172a;
+      overscroll-behavior-y: none;
+    }
+
+    /* 숫자 입력 스피너 제거 */
     input[type='text'].no-spinner::-webkit-outer-spin-button,
     input[type='text'].no-spinner::-webkit-inner-spin-button {
       -webkit-appearance: none;
@@ -41,12 +47,11 @@
     }
   </style>
 </head>
-<body class="bg-slate-900">
+<body class="bg-slate-900 select-none"> <!-- select-none: 텍스트 선택 방지 -->
 
-<div id="root"></div>
+<div id="root" class="h-full"></div>
 
 <script type="text/babel">
-  // 화폐 단위를 정의합니다. (큰 단위부터 작은 단위 순으로 정렬되어 있어야 합니다)
   const denominations = [
     { name: '오만원권', value: 50000, type: 'bill' },
     { name: '만원권', value: 10000, type: 'bill' },
@@ -58,7 +63,6 @@
     { name: '십원', value: 10, type: 'coin' },
   ];
 
-  // 숫자를 한국 형식(콤마)으로 변환하는 함수
   const formatCurrency = (amount) => {
     return new Intl.NumberFormat('ko-KR').format(amount);
   };
@@ -66,45 +70,36 @@
   function App() {
     const { useState, useMemo } = React;
 
-    // 각 화폐 단위의 수량과 금액 입력값을 저장하는 상태
     const [quantities, setQuantities] = useState(() =>
       denominations.reduce((acc, denom) => ({
         ...acc,
-        [denom.value]: { count: '', amountInput: '' } // count와 amountInput을 객체로 저장
+        [denom.value]: { count: '', amountInput: '' }
       }), {})
     );
 
-    // 새로운 상태: 마감 전 금고 금액
     const [closingVaultAmount, setClosingVaultAmount] = useState('');
-    // 새로운 상태: 동전 보충 금액
     const [coinReplenishmentAmount, setCoinReplenishmentAmount] = useState('');
-    // 새로운 상태: 증액 금액
     const [increaseAmount, setIncreaseAmount] = useState('');
-    // 새로운 상태: 감액 금액
     const [decreaseAmount, setDecreaseAmount] = useState('');
 
-
-    // 개수 입력 필드 변경을 처리하는 함수
     const handleQuantityChange = (value, denom) => {
-      const cleanValue = value.replace(/[^0-9]/g, ''); // 숫자만 허용
+      const cleanValue = value.replace(/[^0-9]/g, '');
       const calculatedAmount = (parseInt(cleanValue) || 0) * denom.value;
 
       setQuantities(prev => ({
         ...prev,
         [denom.value]: {
-          count: cleanValue, // 개수 상태 업데이트
-          amountInput: String(calculatedAmount === 0 && cleanValue === '' ? '' : calculatedAmount) // 금액 입력값도 개수에 맞춰 업데이트 (초기화 시 빈 문자열 처리)
+          count: cleanValue,
+          amountInput: String(calculatedAmount === 0 && cleanValue === '' ? '' : calculatedAmount)
         }
       }));
     };
 
-    // 금액 입력 필드 변경을 처리하는 함수
     const handleAmountChange = (value, denom) => {
-      // 입력된 값에서 숫자 이외의 문자 (콤마 포함) 제거
       const cleanValue = value.replace(/[^0-9]/g, '');
       const amount = parseInt(cleanValue) || 0;
 
-      if (denom.value === 0) { // 0으로 나누는 경우 방지 (화폐 단위에 0은 없지만 방어코드)
+      if (denom.value === 0) {
         setQuantities(prev => ({
           ...prev,
           [denom.value]: { count: '', amountInput: '' }
@@ -112,44 +107,22 @@
         return;
       }
 
-      // 입력된 금액에 해당하는 개수 계산 (소수점 버림)
       const calculatedQuantity = Math.floor(amount / denom.value);
 
       setQuantities(prev => ({
         ...prev,
         [denom.value]: {
-          count: cleanValue === '' ? '' : String(calculatedQuantity), // 개수 상태 업데이트
-          amountInput: cleanValue // 금액 입력값은 사용자가 입력한 그대로 유지 (포맷되지 않은 숫자 문자열)
+          count: cleanValue === '' ? '' : String(calculatedQuantity),
+          amountInput: cleanValue
         }
       }));
     };
 
-    // 마감 전 금고 금액 입력 필드 변경을 처리하는 함수
-    const handleClosingVaultAmountChange = (e) => {
-      const value = e.target.value.replace(/[^0-9]/g, ''); // 숫자만 허용
-      setClosingVaultAmount(value);
-    };
+    const handleClosingVaultAmountChange = (e) => setClosingVaultAmount(e.target.value.replace(/[^0-9]/g, ''));
+    const handleCoinReplenishmentChange = (e) => setCoinReplenishmentAmount(e.target.value.replace(/[^0-9]/g, ''));
+    const handleIncreaseChange = (e) => setIncreaseAmount(e.target.value.replace(/[^0-9]/g, ''));
+    const handleDecreaseChange = (e) => setDecreaseAmount(e.target.value.replace(/[^0-9]/g, ''));
 
-    // 동전 보충 금액 입력 필드 변경을 처리하는 함수
-    const handleCoinReplenishmentChange = (e) => {
-      const value = e.target.value.replace(/[^0-9]/g, '');
-      setCoinReplenishmentAmount(value);
-    };
-
-    // 증액 금액 입력 필드 변경을 처리하는 함수
-    const handleIncreaseChange = (e) => {
-      const value = e.target.value.replace(/[^0-9]/g, '');
-      setIncreaseAmount(value);
-    };
-
-    // 감액 금액 입력 필드 변경을 처리하는 함수
-    const handleDecreaseChange = (e) => {
-      const value = e.target.value.replace(/[^0-9]/g, '');
-      setDecreaseAmount(value);
-    };
-
-
-    // 모든 입력 필드를 초기화하는 함수 (새로 추가된 필드 포함)
     const handleReset = () => {
       setQuantities(
         denominations.reduce((acc, denom) => ({
@@ -163,13 +136,11 @@
       setDecreaseAmount('');
     };
 
-    // 금액 계산 (최적화를 위해 useMemo 사용)
     const totals = useMemo(() => {
       let billTotal = 0;
       let coinTotal = 0;
 
       denominations.forEach(denom => {
-        // 총계 계산 시에는 'count' 값을 사용합니다.
         const quantity = parseInt(quantities[denom.value].count) || 0;
         const amount = quantity * denom.value;
 
@@ -182,7 +153,6 @@
 
       const grandTotal = billTotal + coinTotal;
 
-      // 마감 후 금고 금액 계산
       const parsedClosingVaultAmount = parseInt(closingVaultAmount) || 0;
       const parsedCoinReplenishmentAmount = parseInt(coinReplenishmentAmount) || 0;
       const parsedIncreaseAmount = parseInt(increaseAmount) || 0;
@@ -195,18 +165,11 @@
         parsedIncreaseAmount -
         parsedDecreaseAmount;
 
+      return { billTotal, coinTotal, grandTotal, postClosingVaultAmount };
+    }, [quantities, closingVaultAmount, coinReplenishmentAmount, increaseAmount, decreaseAmount]);
 
-      return {
-        billTotal,
-        coinTotal,
-        grandTotal,
-        postClosingVaultAmount
-      };
-    }, [quantities, closingVaultAmount, coinReplenishmentAmount, increaseAmount, decreaseAmount]); // 모든 관련 상태를 의존성 배열에 추가
-
-    // UI 구성 요소 렌더링
     const renderItem = (denom) => {
-      const { count, amountInput } = quantities[denom.value]; // count와 amountInput을 분리하여 사용
+      const { count, amountInput } = quantities[denom.value];
 
       return (
         <div key={denom.value} className="flex items-center justify-between py-0.5 border-b border-gray-300">
@@ -215,45 +178,47 @@
           </div>
 
           <div className="flex items-center space-x-1 flex-shrink-0">
-            {/* 개수 입력 필드 */}
             <input
               type="text"
               inputMode="numeric"
               placeholder="0"
-              value={count} // count 상태 사용
+              value={count}
               onChange={(e) => handleQuantityChange(e.target.value, denom)}
-              className="w-16 h-7 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+              className="w-16 h-7 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
             />
             <span className="text-gray-500 text-xs">개</span>
           </div>
 
           <div className="flex-1 flex items-center justify-end ml-2">
-            {/* 금액 입력 필드 */}
             <input
               type="text"
               inputMode="numeric"
               placeholder="0"
-              // amountInput을 포맷하여 표시. 빈 문자열일 경우 그대로 빈 문자열
               value={amountInput === '' ? '' : formatCurrency(parseInt(amountInput) || 0)}
               onChange={(e) => handleAmountChange(e.target.value, denom)}
-              className="w-28 h-7 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+              className="w-28 h-7 text-right text-gray-800 text-sm font-bold bg-gray-200 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
             />
           </div>
         </div>
       );
     };
 
+    // Safe Area(안전 영역) 패딩 스타일: 노치와 하단 바에 내용이 가려지지 않게 함
+    const safeAreaStyle = {
+      paddingTop: 'env(safe-area-inset-top)',
+      paddingBottom: 'env(safe-area-inset-bottom)'
+    };
+
     return (
-      // 컨테이너가 화면 전체 높이를 차지하도록 min-h-screen을 사용하고, flex-col로 콘텐츠를 중앙에 배치합니다.
-      <div className="min-h-screen bg-slate-900 font-sans flex flex-col items-center justify-center">
-        {/* 전체 컨테이너는 max-w-sm으로 제한하여 PC 화면에서 너무 커지지 않게 합니다. */}
+      <div 
+        className="w-full h-full bg-slate-900 font-sans flex flex-col items-center justify-center overflow-auto"
+        style={safeAreaStyle}
+      >
         <div className="w-full max-w-sm bg-slate-100 rounded-2xl shadow-xl p-2 space-y-1 transform transition-all duration-300">
           <div className="flex justify-between items-center mb-1">
-            {/* 타이틀 글자 크기 축소 */}
             <h1 className="text-xl font-extrabold text-gray-800 pb-1">
               회수금 계산기
             </h1>
-            {/* 버튼 크기 축소 */}
             <button
               onClick={handleReset}
               className="px-3 py-1 bg-slate-700 text-white font-bold text-sm rounded-lg shadow-md hover:bg-slate-600 transition-colors duration-200"
@@ -262,7 +227,6 @@
             </button>
           </div>
 
-          {/* 마감 전 금고 금액 섹션 */}
           <div className="bg-slate-800 rounded-xl p-2 shadow-lg text-white mb-2">
             <div className="flex justify-between items-center">
               <h2 className="text-base font-bold">마감 전 금고 금액</h2>
@@ -272,13 +236,11 @@
                 placeholder="0"
                 value={closingVaultAmount === '' ? '' : formatCurrency(parseInt(closingVaultAmount) || 0)}
                 onChange={handleClosingVaultAmountChange}
-                // 배경색을 부모 섹션과 동일하게 맞춤
-                className="w-36 h-7 text-right text-white text-base font-extrabold bg-slate-800 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+                className="w-36 h-7 text-right text-white text-base font-extrabold bg-slate-800 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
               />
             </div>
           </div>
 
-          {/* 지폐 섹션 */}
           <div className="bg-white rounded-xl p-1 shadow-md border border-gray-200">
             {denominations.filter(d => d.type === 'bill').map(renderItem)}
             <div className="mt-1 pt-1 flex justify-between items-center font-bold text-sm text-gray-800">
@@ -287,7 +249,6 @@
             </div>
           </div>
 
-          {/* 동전 섹션 */}
           <div className="bg-white rounded-xl p-1 shadow-md border border-gray-200">
             {denominations.filter(d => d.type === 'coin').map(renderItem)}
             <div className="mt-1 pt-1 flex justify-between items-center font-bold text-sm text-gray-800">
@@ -296,7 +257,6 @@
             </div>
           </div>
 
-          {/* 총계 섹션 */}
           <div className="bg-slate-800 rounded-xl p-2 shadow-lg text-white">
             <div className="flex justify-between items-center">
               <h2 className="text-base font-bold">합계</h2>
@@ -306,9 +266,7 @@
             </div>
           </div>
 
-          {/* 새로운 컨테이너: 동전 보충, 증액, 감액 (가로 배치) */}
           <div className="flex justify-between space-x-1 mt-1">
-            {/* 섹션 1: 동전 보충 (빨간색) */}
             <div className="bg-red-700 rounded-xl p-2 shadow-lg text-white flex-1">
               <h2 className="text-sm font-bold mb-1">(-) 동전보충</h2>
               <input
@@ -317,11 +275,10 @@
                 placeholder="0"
                 value={coinReplenishmentAmount === '' ? '' : formatCurrency(parseInt(coinReplenishmentAmount) || 0)}
                 onChange={handleCoinReplenishmentChange}
-                className="w-full h-7 text-right text-white text-sm font-bold bg-red-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+                className="w-full h-7 text-right text-white text-sm font-bold bg-red-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
               />
             </div>
 
-            {/* 섹션 2: 증액 (파란색) */}
             <div className="bg-blue-700 rounded-xl p-2 shadow-lg text-white flex-1">
               <h2 className="text-sm font-bold mb-1">(+) 증액</h2>
               <input
@@ -330,11 +287,10 @@
                 placeholder="0"
                 value={increaseAmount === '' ? '' : formatCurrency(parseInt(increaseAmount) || 0)}
                 onChange={handleIncreaseChange}
-                className="w-full h-7 text-right text-white text-sm font-bold bg-blue-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+                className="w-full h-7 text-right text-white text-sm font-bold bg-blue-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
               />
             </div>
 
-            {/* 섹션 3: 감액 (빨간색) */}
             <div className="bg-red-700 rounded-xl p-2 shadow-lg text-white flex-1">
               <h2 className="text-sm font-bold mb-1">(-) 감액</h2>
               <input
@@ -343,12 +299,11 @@
                 placeholder="0"
                 value={decreaseAmount === '' ? '' : formatCurrency(parseInt(decreaseAmount) || 0)}
                 onChange={handleDecreaseChange}
-                className="w-full h-7 text-right text-white text-sm font-bold bg-red-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none [-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+                className="w-full h-7 text-right text-white text-sm font-bold bg-red-700 rounded-md p-1 focus:outline-none focus:ring-2 focus:ring-blue-500 appearance-none"
               />
             </div>
           </div>
 
-          {/* 마감 후 금고 금액 섹션 */}
           <div className="bg-slate-800 rounded-xl p-2 shadow-lg text-white mt-1">
             <div className="flex justify-between items-center">
               <h2 className="text-base font-bold">마감 후 금고 금액</h2>
@@ -363,14 +318,12 @@
     );
   }
 
-  // Render the App
   const container = document.getElementById('root');
   const root = ReactDOM.createRoot(container);
   root.render(<App />);
 </script>
 
 <script>
-  // Service Worker Registration (경로 수정)
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker.register('/returnmoney/sw.js').then(registration => {
