--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
       const bundleLabel = denom.type === 'bill' ? 'strap' : 'bag';
       
       return (
-        // py-2로 변경하여 상하 간격을 적절히 조정
         <div key={denom.value} className="flex items-center justify-between py-2 border-b border-gray-100 last:border-0 hover:bg-white/50 transition-colors px-1">
           
           {/* 이름 */}
@@ -210,7 +209,7 @@
               <span className="text-gray-400 text-[10px] font-medium ml-1 w-3">개</span>
             </div>
 
-            {/* 금액 입력 (w-32 유지) */}
+            {/* 금액 입력 */}
             <div className="flex items-center">
               <input
                 type="text"
@@ -262,7 +261,7 @@
                 placeholder="0"
                 value={closingVaultAmount === '' ? '' : formatCurrency(parseInt(closingVaultAmount) || 0)}
                 onChange={handleClosingVaultAmountChange}
-                className="w-32 text-right text-white text-xl font-bold bg-transparent placeholder-white/30 outline-none"
+                className="w-32 text-right text-white text-xl font-extrabold bg-transparent placeholder-white/30 outline-none p-0"
               />
             </div>
           </div>
@@ -347,11 +346,11 @@
             </div>
           </div>
 
-          {/* 최종 마감 금액 */}
-          <div className="bg-gradient-to-r from-gray-900 to-slate-800 rounded-2xl p-3 shadow-2xl text-white mt-auto">
+          {/* 최종 마감 금액 (높이/스타일 통일) */}
+          <div className="bg-gradient-to-r from-gray-900 to-slate-800 rounded-2xl p-2 px-3 shadow-2xl text-white mt-auto">
             <div className="flex justify-between items-center">
               <h2 className="text-sm font-bold text-gray-300">마감 후 금고</h2>
-              <span className="text-2xl font-black text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 to-amber-400">
+              <span className="text-xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 to-amber-400">
                 {formatCurrency(totals.postClosingVaultAmount)}
               </span>
             </div>
