--- a/index.html
+++ b/index.html
@@ -241,13 +241,14 @@
                />
                <span className="text-gray-500 text-[10px] font-bold ml-1 w-3 leading-tight">개</span>
                
+               {/* pr-2 추가: 오른쪽 여백 확보하여 1 digit 이동 효과 */}
                <input
                   type="text"
                   inputMode="numeric"
                   placeholder="0"
                   value={looseAmountInput}
                   onChange={(e) => handleLooseAmountInputChange(e.target.value, denom)}
-                  className="w-24 h-8 text-right text-sm font-black text-slate-700 bg-transparent outline-none placeholder-gray-400"
+                  className="w-24 h-8 text-right text-sm font-black text-slate-700 bg-transparent outline-none placeholder-gray-400 pr-2"
                />
             </div>
 
@@ -266,10 +267,9 @@
         className="w-full min-h-screen flex flex-col mx-auto max-w-md bg-gradient-to-br from-[#fdfbfb] to-[#ebedee] sm:shadow-2xl sm:rounded-[2rem] sm:my-4 sm:min-h-0 sm:h-auto overflow-visible"
         style={{...safeAreaStyle, background: 'linear-gradient(180deg, #fdfbfb 0%, #f4f7f6 100%)'}}
       >
-        {/* py-4 -> p-2, space-y-2 -> space-y-1: 전체 여백 축소 */}
         <div className="flex-1 flex flex-col p-2 space-y-1 h-full">
           
-          {/* 헤더: mb-1 제거하여 상단 밀착 */}
+          {/* 헤더 */}
           <div className="flex-none flex justify-between items-center px-1">
             <h1 className="text-lg font-black text-transparent bg-clip-text bg-gradient-to-r from-violet-600 to-indigo-600">
               회수금 계산기
@@ -316,7 +316,7 @@
               {/* 동전 */}
               {denominations.filter(d => d.type === 'coin').map(renderItem)}
 
-              {/* 동전 계: mt-2 -> mt-1 로 여백 축소 */}
+              {/* 동전 계 */}
               <div className="flex-none flex justify-between items-center py-2 px-2 bg-indigo-200/50 rounded-lg mt-1 min-h-[36px]">
                 <span className="text-sm font-bold text-indigo-700">동전 계</span>
                 <span className="text-lg font-black text-slate-700">
@@ -376,7 +376,7 @@
             </div>
           </div>
 
-          {/* 마감 후 금고: mb-8 제거하여 하단 여백 삭제 */}
+          {/* 마감 후 금고 */}
           <div className="flex-none bg-gradient-to-r from-gray-900 to-slate-800 rounded-2xl py-2 px-3 shadow-2xl text-white mt-auto">
             <div className="flex justify-between items-center">
               <h2 className="text-sm font-bold text-gray-300">마감 후 금고</h2>
